--- a/frontparqueadero/src/app/app.component.css
+++ b/frontparqueadero/src/app/app.component.css
@@ -20,18 +20,20 @@
   border: 2px solid black;
   border-radius: 29px;
   box-shadow: 2px 2px 25px 2px;
+  background: #eeeeeeb8;
 }
 
 .tabla-contenedor {
     display: block;
-    width: 60%;
-    margin-left: 20%;
+    width: 40%;
+    margin-left: 5%;
     float: left;
     margin-top: 20px;
     padding: 20px;
   	border: 2px solid black;
     border-radius: 29px;
     box-shadow: 2px 2px 25px 2px;
+    background: #eeeeeeb8;
 }
 .mat-header-cell {
     font-weight: bold;
